--- a/Views/Food/Index.cshtml
+++ b/Views/Food/Index.cshtml
@@ -2,6 +2,7 @@
 @model List<FoodItem>
 
 <h2>Food Items</h2>
+<a asp-action="Create" class="btn btn-primary">Add</a>
 
 <table class="table">
     <thead>
@@ -10,6 +11,7 @@
             <th>Name</th>
             <th>Description</th>
             <th>Price</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -20,6 +22,11 @@
                 <td>@foodItem.Name</td>
                 <td>@foodItem.Description</td>
                 <td>@foodItem.Price.ToString("N2")</td>
+                 <td>
+                    <a asp-action="Details" asp-route-id="@foodItem.Id" class="btn btn-info">Details</a>
+                    <a asp-action="Edit" asp-route-id="@foodItem.Id" class="btn btn-warning">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@foodItem.Id" class="btn btn-danger">Delete</a>
+                </td>
             </tr>
         }
     </tbody>
