--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Food" asp-action="Index">FoodItem</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Food" asp-action="Create">FoodADD</a>
+                        </li>
                     </ul>
                 </div>
             </div>
