--- a/Views/Food/Index.cshtml
+++ b/Views/Food/Index.cshtml
@@ -25,8 +25,8 @@
                  <td>
                     <a asp-action="Details" asp-route-id="@foodItem.Id" class="btn btn-info">Details</a>
                     <a asp-action="Edit" asp-route-id="@foodItem.Id"  class="btn btn-warning">Edit</a>
-                    <a asp-action="Delete" asp-route-id="@foodItem.Id" class="btn btn-danger">Delete</a>
-                </td>
+                    <a asp-action="Delete" asp-route-id="@foodItem.Id" class="btn btn-danger"
+       onclick="return confirm('Are you sure you want to delete this item?');">Delete</a>                  </td>
             </tr>
         }
     </tbody>
